optmize file tracking and expand git repo tracking

--- a/ntrack.conf
+++ b/ntrack.conf
@@ -1,29 +1,68 @@
 #! /bin/bash
 ntrack_dir="$HOME/.config/ntrack"
-target_file="$HOME/.config/ntrack/Target"
-config_file="$HOME/.config/ntrack/ntrack.conf"
+info_file="$HOME/.config/ntrack/ntrack.info"
 icon_array=('🌜' '🔍' '💣' '⛔')
+ignored_path=(\
+    "$HOME/.cache"\
+    "$HOME/.local"\
+    "$HOME/.vim/plugged"\
+    "$HOME/documents"\
+    "$HOME/Downloads"\
+    "$HOME/matlab"\
+    "$HOME/media"\
+    "$HOME/Texlive"\
+    "$HOME/vbox"\
+    )
 
 printf_clean()
 {
+    # $1: target file number
+    # $2: target file path
+    # $3, $4: modification date of target file
     printf "\033[40;36m%-5s\033[0m \033[40;37m%-40s\033[0m \033[40;34m%-20s\033[0m \033[40;34m[%-2s]\033[0m\n"\
         "#$1" "$2" "$3 $4" "${icon_array[0]}"
-
 }
+
 printf_modify()
 {
+    # $1: target file number
+    # $2: target file path
+    # $3, $4: modification date of target file
     printf "\033[40;36m%-5s\033[0m \033[40;37m%-40s\033[0m \033[40;34m%-20s\033[0m \033[40;33;5m[%-2s]\033[0m\n"\
         "#$1" "$2" "$3 $4" "${icon_array[1]}"
 }
 
 prinf_link()
 {
+    # $1: target file number
+    # $2: target file path
+    # $3, $4: modification date of target file
     printf "\033[40;36m%-5s\033[0m \033[40;37m%-40s\033[0m \033[40;34m%-20s\033[0m \033[40;35;5m[%-2s]\033[0m\n"\
         "#$1" "$2" "$3 $4" "${icon_array[2]}"
 }
 
 printf_error()
 {
+    # $1: target file number
+    # $2: target file path
     printf "\033[40;36m%-5s\033[0m %-61s \033[40;31;5m[%-2s]\033[0m\n"\
         "#$1" "$2" "${icon_array[3]}"
+}
+
+printf_git_dirty()
+{
+    # $1: abs_path
+    printf "\033[40;35m%-17s\033[0m %-48s \033[40;33;5m%-5s\033[0m\n\n" "[${1##*/}]" $1 "[ ]"
+}
+
+printf_git_clean()
+{
+    # $1: abs_path
+    printf "\033[40;35m%-17s\033[0m %-48s \033[40;34m%-5s\033[0m\n\n" "[${1##*/}]" $1 "[🌜]"
+}
+
+printf_git_asyn()
+{
+    # $1: abs_path
+    printf "\033[40;35m%-17s\033[0m %-48s \033[40;37m%-5s\033[0m\n\n" "[${1##*/}]" $1 "[💣]"
 }
