remote files tracking

--- a/ntrack.conf
+++ b/ntrack.conf
@@ -19,8 +19,9 @@ printf_clean()
     # $1: target file number
     # $2: target file path
     # $3, $4: modification date of target file
-    printf "\033[40;36m%-5s\033[0m \033[40;37m%-40s\033[0m \033[40;34m%-20s\033[0m \033[40;34m[%-2s]\033[0m\n"\
-        "#$1" "$2" "$3 $4" "${icon_array[0]}"
+    printf "\033[40;36m%-5s\033[0m \033[40;37m%s\033[0m \n %-45s \033[40;34m%-20s\033[0m \033[40;34m[%-2s]\033[0m\n\n"\
+        "#$1" "$2" " " "$3 $4" "${icon_array[0]}"
+
 }
 
 printf_modify()
@@ -28,8 +29,8 @@ printf_modify()
     # $1: target file number
     # $2: target file path
     # $3, $4: modification date of target file
-    printf "\033[40;36m%-5s\033[0m \033[40;37m%-40s\033[0m \033[40;34m%-20s\033[0m \033[40;33;5m[%-2s]\033[0m\n"\
-        "#$1" "$2" "$3 $4" "${icon_array[1]}"
+    printf "\033[40;36m%-5s\033[0m \033[40;37m%s\033[0m \n %-45s \033[40;34m%-20s\033[0m \033[40;33;5m[%-2s]\033[0m\n\n"\
+        "#$1" "$2" " " "$3 $4" "${icon_array[1]}"
 }
 
 prinf_link()
@@ -37,16 +38,16 @@ prinf_link()
     # $1: target file number
     # $2: target file path
     # $3, $4: modification date of target file
-    printf "\033[40;36m%-5s\033[0m \033[40;37m%-40s\033[0m \033[40;34m%-20s\033[0m \033[40;35;5m[%-2s]\033[0m\n"\
-        "#$1" "$2" "$3 $4" "${icon_array[2]}"
+    printf "\033[40;36m%-5s\033[0m \033[40;37m%s\033[0m \n %-45s \033[40;34m%-20s\033[0m \033[40;35;5m[%-2s]\033[0m\n\n"\
+        "#$1" "$2" " " "$3 $4" "${icon_array[2]}"
 }
 
 printf_error()
 {
     # $1: target file number
     # $2: target file path
-    printf "\033[40;36m%-5s\033[0m %-61s \033[40;31;5m[%-2s]\033[0m\n"\
-        "#$1" "$2" "${icon_array[3]}"
+    printf "\033[40;36m%-5s\033[0m %s \n %-51s \033[40;31;5m%-10s  [%-2s]\033[0m\n\n"\
+        "#$1" "$2" " " "No File Found" "${icon_array[3]}"
 }
 
 printf_git_dirty()
